--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
+                <ul>
+                    <li><a href="tutorials/tutorial02/index.html">Tutorial 2</a></li>
+                    <li><a href="index.html">Tutorial 3</a></li>
+                    <li>Tutorial 4(WIP)</li>
+                </ul>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
@@ -29,6 +34,13 @@
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
+                <ul>
+                    <li><a href="https://www.transcendpixels.com/">TranscendPixels</a></li>
+                    <li><a href="https://stars.chromeexperiments.com/">Stars</a></li>
+                    <li><a href="https://lichess.org">Lichess</a></li>
+                    <li><a href="https://www.discord.com">Discord</a></li>
+                    <li><a href="https://www.desmos.com">Desmos</a></li>
+                </ul>
                 <!-- 
                     Links to 5-10 websites that inspire you
                 -->
