--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     Links to your Homework assignments go here.
                     When you submit a new HW assignment, add a link to it here (if applicable)
                 -->
+                <a href="homework/task01/index.html">Task01</a>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
