--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="tutorials/tutorial02/index.html">Tutorial 2</a></li>
                     <li><a href="index.html">Tutorial 3</a></li>
-                    <li>Tutorial 4(WIP)</li>
+                    <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
                 </ul>
                 <!-- 
                     Links to your tutorial assignments go here.
