--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     When you submit a new HW assignment, add a link to it here (if applicable)
                 -->
                 <a href="homework/task01/index.html">Task01</a>
+                <a href="homework/task02/history.html">Task02</a>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
