--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 -->
                 <a href="homework/task01/index.html">Task01</a>
                 <a href="homework/task02/history.html">Task02</a>
+                <a href="homework/hw03/exercise02/index.html">HM3-Task2</a>
+                <a href="homework/hw03/exercise03/index.html">HM3-Task3</a>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
