--- a/lectures/lecture08/03-twelve-column-grid/index.html
+++ b/lectures/lecture08/03-twelve-column-grid/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="task-2 container">
-      <div class="item item-1 height-50">1</div>
+    <div class="container-grid">
+      <div class="item item-1">1</div>
 
-      <div class="item item-2 height-50">2</div>
-    </div>
+      <div class="item item-2">2</div>
+    
   </body>
 </html>
