--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <!-- 
                     Links to your in-class activities
                 -->
+                <a href="quizzes/quiz01/index.html">Quiz 1</a>
             </section>
         </main>
    </body>
