--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     Links to your in-class activities
                 -->
                 <a href="quizzes/quiz01/index.html">Quiz 1</a>
+                <a href="homework/hw04/06-tacotemple/index.html">H4Task6</a>
+                <a href="homework/hw04/03-navbar/index.html">H4Task3</a>
+                <a href="homework/hw04/05-grid/index.html">H4Task5</a>
             </section>
         </main>
    </body>
