--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <a href="homework/task02/history.html">Task02</a>
                 <a href="homework/hw03/exercise02/index.html">HM3-Task2</a>
                 <a href="homework/hw03/exercise03/index.html">HM3-Task3</a>
+                <a href="homework/hw04/06-tacotemple/index.html">H4Task6</a>
+                <a href="homework/hw04/03-navbar/index.html">H4Task3</a>
+                <a href="homework/hw04/05-grid/index.html">H4Task5</a>
+                <a href="homework/hw04/01-flexbox-froggy/picture.html">H4Task1&4</a>
+                <a href="homework/hw04/02-flex/index.html">H4Task2</a>
+                <a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
@@ -55,9 +61,7 @@
                     Links to your in-class activities
                 -->
                 <a href="quizzes/quiz01/index.html">Quiz 1</a>
-                <a href="homework/hw04/06-tacotemple/index.html">H4Task6</a>
-                <a href="homework/hw04/03-navbar/index.html">H4Task3</a>
-                <a href="homework/hw04/05-grid/index.html">H4Task5</a>
+                
             </section>
         </main>
    </body>
