--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
        <header>
            <h1>Noah's CSCI 185 Homepage</h1>
        </header> 
+       <section id="sun">
+        <img src="images/sun.jfif" alt="The Sun."> 
+    </section>
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
@@ -31,17 +34,21 @@
                     Links to your Homework assignments go here.
                     When you submit a new HW assignment, add a link to it here (if applicable)
                 -->
-                <a href="homework/task01/index.html">Task01</a>
-                <a href="homework/task02/history.html">Task02</a>
-                <a href="homework/hw03/exercise02/index.html">HM3-Task2</a>
-                <a href="homework/hw03/exercise03/index.html">HM3-Task3</a>
-                <a href="homework/hw04/06-tacotemple/index.html">H4Task6</a>
-                <a href="homework/hw04/03-navbar/index.html">H4Task3</a>
-                <a href="homework/hw04/05-grid/index.html">H4Task5</a>
-                <a href="homework/hw04/01-flexbox-froggy/picture.html">H4Task1&4</a>
-                <a href="homework/hw04/02-flex/index.html">H4Task2</a>
-                <a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a>
+                <ul>
+                <li><a href="homework/task01/index.html">Task01</a></li>
+                <li><a href="homework/task02/history.html">Task02</a></li>
+                <li><a href="homework/hw03/exercise02/index.html">HM3-Task2</a></li>
+                <li><a href="homework/hw03/exercise03/index.html">HM3-Task3</a></li>
+                <li><a href="homework/hw04/06-tacotemple/index.html">H4Task6</a></li>
+                <li><a href="homework/hw04/03-navbar/index.html">H4Task3</a></li>
+                <li><a href="homework/hw04/05-grid/index.html">H4Task5</a></li>
+                <li><a href="homework/hw04/01-flexbox-froggy/picture.html">H4Task1&4</a></li>
+                <li><a href="homework/hw04/02-flex/index.html">H4Task2</a></li>
+                <li><a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a></li>
+                </ul>
+                
             </section>
+         
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
                 <ul>
