Finished Homework five.

--- a/homework/hw05/index.html
+++ b/homework/hw05/index.html
@@ -14,13 +14,13 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div>
-            <img id="profile-pic" src="images/profile.jpg" alt="Photo of a German Shepard dog." />
+            <img id="profile" src="images/profile.jpg" alt="Photo of a German Shepard dog." />
             <h1>Welcome to my portfolio website</h1>
         </div>
     </header>
@@ -43,17 +43,17 @@
                 <h3>Name of Project</h3>
                 <p>Ipsum lorem dolor aliquam ante commodo magna sed accumsan.</p>
             </section>
-            <section class="card">
+            <section class="card1">
                 <img src="https://picsum.photos/id/1015/300/200" alt="image description 2" />
                 <h3>Name of Project</h3>
                 <p>Ipsum lorem dolor aliquam ante commodo magna sed accumsan.</p>
             </section>
-            <section class="card">
+            <section class="card2">
                 <img src="https://picsum.photos/id/572/300/200" alt="image description 3" />
                 <h3>Name of Project</h3>
                 <p>Ipsum lorem dolor aliquam ante commodo magna sed accumsan.</p>
             </section>
-            <section class="card">
+            <section class="card3">
                 <img src="https://picsum.photos/id/573/300/200" alt="image description 4" />
                 <h3>Name of Project</h3>
                 <p>Ipsum lorem dolor aliquam ante commodo magna sed accumsan.</p>
@@ -65,7 +65,7 @@
         <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
         <div class="contact-details">
             <form method="post" action="#">
-                <div class="row row1">
+                <div class="button">
                     <input type="text" name="name" id="name" placeholder="Name"/>
                     <input type="email" name="email" id="email" placeholder="Email" />
                 </div>
@@ -74,6 +74,7 @@
                 </div>
                 <div class="row">
                     <input id="submit" type="submit" value="Send Message">
+                  
                 </div>
             </form>
             <section id="contact-info">
