--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="homework/hw04/01-flexbox-froggy/picture.html">H4Task1&4</a></li>
                 <li><a href="homework/hw04/02-flex/index.html">H4Task2</a></li>
                 <li><a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a></li>
+                <li><a href="homework/hw05/index.html">H5 Homepage</a></li>
                 </ul>
                 
             </section>
