--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                 <!-- 
                     Links to your in-class activities
                 -->
-                <a href="quizzes/quiz01/index.html">Quiz 1</a>
+               <ul>
+                <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
+                <li><a href="quizzes/quiz02/index.html">Quiz 2</a></li>
+               </ul>
+               
                 
             </section>
         </main>
