--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="tutorials/tutorial04/index.html">Tutorial 4</a></li>
                     <li><a href="tutorials/tutorial07/01-font-switcher/index.html">tutorial07-1</a></li>
                     <li><a href="tutorials/tutorial07/02-theme-switcher/index.html">tutorial07-2</a></li>
+                    <li><a href="tutorials/tutorial08/index.html">Tutorial8</a></li>
                 </ul>
                 <!-- 
                     Links to your tutorial assignments go here.
