--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="homework/hw04/02-flex/index.html">H4Task2</a></li>
                 <li><a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a></li>
                 <li><a href="homework/hw05/index.html">H5 Homepage</a></li>
+                <li><a href="homework/hw06/index.html">H6</a></li>
                 </ul>
                 
             </section>
