Worked on Final

--- a/homework/hw04/06-tacotemple/index.html
+++ b/homework/hw04/06-tacotemple/index.html
@@ -11,29 +11,29 @@
     <main>
         <section class="card">
             <div>
-                <h2>Chips & Salsa</h2>
+                <h2>Banh Mi Tofu</h2>
                 <p>
-                    Your choice of one of our scratch-made salsas and plenty of fresh chips (serves 3-4ppl)
+                   Tofu Tacos
                 </p>
                 <span>$4.00</span>
             </div>
-            <img src="images/salsa.webp" alt="salsa" />
+            <img src="images/salsa.webp" alt="Tofu Tacos" />
         </section>
         <section class="card">
             <div>
-                <h2>Chips & Guacamole</h2>
+                <h2>Black Bean Tacos</h2>
                 <p>
-                    Fresh avocados smashed with love, served with plenty of our fresh chips
+                   Fresh black bean tacos topped with cheese sauce.
                 </p>
                 <span>$4.00</span>
             </div>
-            <img src="images/guac.webp" alt="salsa" />
+            <img src="images/guac.webp" alt="Black bean tacos" />
         </section>
         <section class="card">
             <div>
-                <h2>Chips & Queso</h2>
+                <h2>Jerk Chicken Tacos</h2>
                 <p>
-                    your choice of one of our scratch-made salsas and plenty of fresh chips (serves 3-4ppl)
+                    Tacos with Jerked Chicken and Vegetables.
                 </p>
                 <span>$4.00</span>
             </div>
