Worked on Homework 7.

--- a/homework/final/menu.html
+++ b/homework/final/menu.html
@@ -148,7 +148,7 @@
             <div>
                 <h2>Thai Peanut Chicken</h2>
                 <p>
-                Tacos with Chicken and our signature Thai sauce.
+                Tacos with Chicken and our signature Thai peanut sauce.
                 </p>
                 <span>$5.00</span>
             </div>
