--- a/homework/final/menu.html
+++ b/homework/final/menu.html
@@ -155,5 +155,6 @@
             <img src="images/thai_chicken_tacos11..jpg" alt="salsa" />
         </section>
     </main>
+    <footer>Copyright 2023</footer>
 </body>
 </html>
