--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="homework/hw04/07-responsive-layout-grid/index.html">H4Task7</a></li>
                 <li><a href="homework/hw05/index.html">H5 Homepage</a></li>
                 <li><a href="homework/hw06/index.html">H6</a></li>
-                <li><a href="homework/final/menu.html">Final</a></li>
+                <li><a href="homework/final/home.html">Final</a></li>
                 <li><a href="homework/hw07/your_task/index.html">H7</a></li>
                 </ul>
                 
