--- a/homework/final/home.html
+++ b/homework/final/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>White Duck Taco</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,6 +13,11 @@
         <h1><a href="contact.html">Contact</a></h1>
         <h1><a href="menu.html">Menu</a></h1>
     </nav>
+    <h1>White Duck Taco Homepage</h1>
+    <p>Asheville, NC</p>
     <img id="duck" src="images/white-duck-taco.png">
+    
+    
+    <footer><br><br><br><br><br><br><br><br><br>Copyright 2023</footer>
 </body>
 </html>
