--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
    <head>
         <!-- stylesheets and metadata go here -->
-       <title>My CSCI 185 Homepage</title>       
+       <title>Generic Blog</title>       
        <link rel="stylesheet" href="styles.css">
    </head>
    <body>
        <!-- HTML content tags go here. Change anything you want! -->
        <header>
-           <h1>Noah's CSCI 185 Homepage</h1>
+           <h1>Noah's Blog</h1>
        </header> 
        <section id="sun">
         <img src="images/sun.jfif" alt="The Sun."> 
