Added robots.txt to block bots.

--- a/homework/surgery/home.html
+++ b/homework/surgery/home.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polyp Removal</title>
+    <title>EMR Surgery Polyp Removal</title>
     <link rel="stylesheet" href="moon.css">
+    <meta name="description" content="EMR article detailing the procedure of the surgery and some personal storys.">
 </head>
 <body>
     <h2>Removal of Complex Colon Polyp by Endoscopic Mucosal Resection Surgery (EMR)</h2>
