added semantic tags.

--- a/homework/surgery/home.html
+++ b/homework/surgery/home.html
@@ -8,6 +8,7 @@
     <meta name="description" content="EMR article detailing the procedure of the surgery and some personal storys.">
 </head>
 <body>
+    <article>
     <h2>Removal of Complex Colon Polyp by Endoscopic Mucosal Resection Surgery (EMR)</h2>
     
     <p>In 2013 during a colonoscopy, the doctors found a 15mm pre-cancerous (benign) 
@@ -105,6 +106,7 @@
 
         
         </p>
+    </article>
         <footer>
             <img id="glass" src="images/mom_spyglass.JPG">
             <p>This post was written by Cindy Castevens, and you can contact me at cjc648@yahoo.com<br>The administrator of this website is NoahCSC. You may contact him at ncastevens117@gmail.com for questions or suggestions about the website.
