--- a/homework/surgery/home.html
+++ b/homework/surgery/home.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EMR Surgery Polyp Removal</title>
+    <title>EMR Colon Polyp Removal</title>
     <link rel="stylesheet" href="moon.css">
-    <meta name="description" content="EMR article detailing the procedure of the surgery and some personal storys.">
+    <meta name="description" content="EMR article detailing the procedure and some personal storys.">
     <meta name="google-site-verification" content="Jp_ucEFWEjBxLQgtT2kOh0gQMpKPlUho36BUDKc-JGs" />
     <meta name="property" content="Alternatives to colon resection surgery, Pre-cancerous polyp near cecum, EMR for removal of complex colon polyps, How long does it take pre-cancerous polyps to become cancerous, Are pre-cancerous polyps fast growing, How to keep your colon intact when polyp cannot be snipped out, Other treatment options for removal of colon polyps, Adenomatous polyps of the colon, Semi-sessile polyps of the colon, Pre-cancerous colon polyps are slow growing and do not spread, Low carb Mediterranean diet for colon polyps, Chinese herbs and cancer researchers help with colon polyps, Doctors push colon resection surgery for pre-cancerous polyps, Doctors push colon resection surgery for non-cancerous polyps, EMR is safe and effective, Find an EMR doctor who is highly trained, Find an EMR doctor who has performed over 100 successful procedures, Many gastroenterologists are unfamiliar with EMR, Many doctors are against EMR if it is not a part of their medical group., Doctors only recommend what procedures they are familiar with, Mechanical Link therapy helps patients recover from colonoscopies, How to remove colon polyps near appendix and keep your colon.,  With EMR, polyps are removed during a colonoscopy, Fragmented tubulovillous adenoma polyp removed by EMR, Endoscopic mucosal resection for safe and effective colon polyp removal, How to remove cecal polyps without surgery">
 </head>
 <body>
     <article>
-    <h2>Removal of Complex Colon Polyp by Endoscopic Mucosal Resection Surgery (EMR)</h2>
+    <h2>Removal of Complex Colon Polyp by Endoscopic Mucosal Resection (EMR)</h2>
     
     <p>In 2013 during a colonoscopy, the doctors found a 15mm pre-cancerous (benign) 
         polyp near my appendix in my cecum that could not be snipped off, due to its
@@ -84,7 +84,7 @@
     </p>
     <h2>The EMR Procedure is Much like a Normal Colonoscopy</h2>
     <p>So I did my colonoscopy prep as normal, and my sister drove me two hours that morning to Chapel Hill,
-         where the EMR was performed as outpatient surgery, just as if it were a normal colonoscopy. I 
+         where the EMR was performed as an outpatient procedure, just as if it were a normal colonoscopy. I 
          arrived at the hospital around 9am, and after the procedure, I was wheeled to the car and 
          headed towards home by around 11:30am. Dr. Grimm said he had gotten it all and would call me 
          with the biopsy results.<br><br>
