--- a/homework/surgery/home.html
+++ b/homework/surgery/home.html
@@ -111,7 +111,7 @@
     </article>
         <footer>
             <img id="glass" src="images/mom_spyglass.JPG">
-            <p>This post was written by Cindy Castevens, and you can contact me at cjc648@yahoo.com<br>The administrator of this website is NoahCSC. You may contact him at ncastevens117@gmail.com for questions or suggestions about the website.
+            <p>This post was written by Cindy Castevens, and you can contact me at cjc648@yahoo.com<br>The administrator of this website is NoahCSC. His email is no longer listed due to webcrawler spam.
             </p>
             <a href="../../index.html"> Noah's Homepage</a>
         </footer>
